--- a/views/lottery.xml
+++ b/views/lottery.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<lottery>
+<?xml-stylesheet type="text/css" href="lottery.xsl"?>
+<?xml-stylesheet href="../styles/style.css" type="text/css"?>
+<lottery_ui>
+    <div class="grid_template">
+    <th>
+        <tr>
     <numbers_slot_1>
         <number>1</number>
         <number>2</number>
         <number>3</number>
         <number>4</number>
+    </numbers_slot_1>
+</tr>
+<tr>
+    <numbers_slot_2>
         <number>5</number>
         <number>6</number>
         <number>7</number>
         <number>8</number>
+
+    </numbers_slot_2>
+</tr>
+<tr>
+    <numbers_slot_3>
         <number>9</number>
-        <number>10</number>
-        <number>11</number>
-        <number>12</number>
-    </numbers_slot_1>
-</lottery>
+        <number>1_0</number>
+        <number>1_1</number>
+        <number>1_2</number>
+
+    </numbers_slot_3>
+</tr>
+</th>
+</div>
+</lottery_ui>
