--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,17 @@ lottery_ui {
 lottery_ui numbers_slot_1, lottery_ui numbers_slot_2, lottery_ui numbers_slot_3 {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+lottery_ui numbers_slot_1 number, lottery_ui numbers_slot_2 number, lottery_ui numbers_slot_3 number {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .grid_template {
