--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,7 +5,19 @@ lottery_ui {
     numbers_slot_1 , numbers_slot_2, numbers_slot_3 {
         display:flex;
         flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        number {
+            width: 50px;
+            height: 50px;
+            border: 1px solid black;
+            margin: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
+
 }
 .grid_template {
     justify-content: center;
