--- a/views/lottery.xml
+++ b/views/lottery.xml
@@ -24,9 +24,9 @@
 <tr>
     <numbers_slot_3>
         <number id="9">9</number>
-        <number id="10">1_0</number>
-        <number id="11">1_1</number>
-        <number id="12">1_2</number>
+        <number id="10">10</number>
+        <number id="11">11</number>
+        <number id="12">12</number>
 
     </numbers_slot_3>
 </tr>
